Bug 235618 - Payee completion doesn't work
Summary: Payee completion doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-28 13:05 UTC by Tony B
Modified: 2010-05-28 10:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony B 2010-04-28 13:05:14 UTC
Version:           3.97 (using KDE 4.3.1)
OS:                Linux
Installed from:    openSUSE RPMs

When entering a transaction in the KDE3 version, I can type sufficient letters
in the Payee field to uniquely match an existing payee, then press Tab to have
it completed. Same applies to the Category field.

In the KDE4 version (SVN 1120095 as of this morning), this works for Category
but not Payee. It creates a new payee (I have auto payee creation set) with
just the letters I have typed in so far.

(From mailing list)

Q. I just tried it here and it works fine. Check your settings.

A. The only relevant KMM option (which does not appear in the settings dialog) seems to be 'auto-create payee'. Setting this on or off makes no difference. If it's a KDE setting, why does it work for Category but not Payee.

Q. Is this a UK specific problem?

A. Maybe, but again, why the Category vs. Payee difference?
Comment 1 Cristian Oneț 2010-04-28 13:22:35 UTC
There is a really big difference between between the category and the payee entry widget. The category widget is the old widget with it's list ported to Qt4 and the payee widget is model/view based.

Anyway now I've got the problem and will fix it if you don't manage to fix in before me :).
Comment 2 Thomas Baumgart 2010-05-28 10:39:40 UTC
SVN commit 1131470 by tbaumgart:

In case we tab out of a combo box, we make sure that if the current completion
partially contains the current text that we set the current text to
the full completion text to avoid creating new objects.

BUG: 235618

 M  +9 -0      kmymoneymvccombo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1131470