In case we tab out of a combo box, we make sure that if the current completion partially contains the current text that we set the current text to the full completion text to avoid creating new objects.

BUG: 235618

svn path=/trunk/kdereview/kmymoney/; revision=1131470